--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -21,4 +21,5 @@
     <item name="sign_in_button" type="id" />
     <item name="sign_up_button" type="id" />
     <item name="btn_back" type="id" />
+    <item name="yesno" type="id" />
 </resources>
