--- a/app/src/main/res/layout/activity_appoint_ments_dashboard.xml
+++ b/app/src/main/res/layout/activity_appoint_ments_dashboard.xml
@@ -9,19 +9,25 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:id="@+id/add_appointment_image_button"
         android:layout_height="wrap_content"
 
         android:layout_margin="20dp"
         android:orientation="horizontal" >
-        <ImageButton
-            android:id="@+id/add_appointment_image_button"
+        <ImageView
             android:padding="5dp"
-
             android:elevation="2dp"
-
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_add_black_24dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textColor="@color/bluefav"
+            android:text="Click to Create An Appointment"
+            android:textSize="15sp" />
 
     </LinearLayout>
 
