--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,13 @@
     android:layout_gravity="center"
     android:gravity="center"
     tools:context=".MainActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_margin="20dp">
         <ImageView
@@ -26,7 +30,7 @@
             android:textStyle="bold"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"/>.
+            android:textSize="20dp"/>
 
 
 
@@ -73,35 +77,21 @@
             android:background="@drawable/button"
             tools:ignore="DuplicateIds" />
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
 
 
+        <Button
+            android:id="@+id/signupp"
+            android:layout_marginTop="20dp"
+            android:textColor="#fff"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:text="Sign Up"
+            android:background="@drawable/button"
+            tools:ignore="DuplicateIds" />
 
 
-
-
-
-
-
-
-
-    <Button
-        android:id="@+id/register"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="SIGNUP" />
-
-    <Button
-        android:id="@+id/login"
-        android:layout_width="156dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/common_signin_button_text" />
     </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
