--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,13 +6,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#2CA7E0"
+
+    android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context=".SplashScreenActivity">
 
     <ImageView
         android:id="@+id/img"
+        android:layout_marginTop="80dp"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:src="@drawable/doc1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:textSize="30sp"
+        android:text="@string/albus_health_care"
+        android:layout_gravity="center_horizontal"/>
 </LinearLayout>
