--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context=".MainActivity">
     <ScrollView
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="match_parent" >
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,10 +19,12 @@
         android:layout_gravity="center"
         android:layout_margin="20dp">
         <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/d2"
-        android:layout_gravity="center" />
+
+
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/d2"
+            android:layout_gravity="center" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
